unpackaged/objects/WW_EventDetails__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>WW_Event__c</referenceTo>
        <relationshipLabel>EventDetails</relationshipLabel>
        <relationshipName>EventDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EventDetails</relationshipLabel>
        <relationshipName>EventDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WW_AmountDonated__c</fullName>
        <label>Amount Donated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WW_Amount__c</fullName>
        <description>To capture donated amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WW_CommodityDonations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commodity Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Cooking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if the volunteer opts for cooking this checkbox should be checked while creating junction</description>
        <label>Cooking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Food_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WW_Monitory_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monetary Donation</label>
        <type>Checkbox</type>
    </fields>
    <label>EventDetails</label>
    <nameField>
        <displayFormat>WW-{000}</displayFormat>
        <label>Event Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EventDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>